--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tanstack/react-query-devtools": "^5.66.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
     "react-bootstrap": "^2.10.6",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2"
   },
