--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.66.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "broadcast-channel": "^7.0.0",
     "jodit-react": "^5.2.15",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
