--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
