--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-leaflet": "^5.0.0-rc.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
